--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:26.0.0-alpha1'
     compile 'com.github.chrisbanes:PhotoView:2.0.0'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
 
 }
