--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
 
         </activity>
         <activity android:name=".AnimActivity">
+        </activity>
+        <activity android:name=".copyboard.TestActivity">
+        </activity>
+        <activity android:name=".SampleActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
